--- a/frontends/rust/comet-rs/Cargo.toml
+++ b/frontends/rust/comet-rs/Cargo.toml
@@ -19,6 +19,7 @@ assert_cmd = "2.0.4"
 [lib]
 name="comet_rs"
 path="src/lib.rs"
+doctest = false
 
 [features]
 comet_errors_as_warnings=["comet-rs-impl/comet_errors_as_warnings"]
