--- a/frontends/rust/comet-rs/Cargo.toml
+++ b/frontends/rust/comet-rs/Cargo.toml
@@ -1,13 +1,21 @@
 [package]
 name = "comet-rs"
 version = "0.1.0"
+authors = ["Ryan D. Friese <ryan.friese@pnnl.gov>", "Gokcen Kestor <gokcen.kestor@pnnl.gov>"]
 edition = "2021"
+description = "Rust eDSL for COMET: domain specific COMpiler for Extreme Targets"
+readme = "README.md"
+repository = "https://github.com/pnnl/COMET/tree/master/frontends/rust/comet-rs"
+homepage = "https://github.com/pnnl/COMET"
+license-file = "LICENSE"
+keywords = ["heterogeneous", "mlir", "compiler", "dsl", "COMET"]
+categories = ["compilers","hardware-support","science"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 num-traits = "0.2"
-comet-rs-impl = {path="impl/"}
+comet-rs-impl = {version = "0.1.0", path="impl" }
 rand = "0.8.0"
 libloading = "0.7"
 inventory = "0.2"
