--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /build*
+/cmake-build*
 /docker_build
 .vscode
 #*
@@ -6,5 +7,11 @@
 .DS_Store
 __pycache__
 lit.site.cfg.py
+
+# Local Directory
+/local_stuff
+
+# IDE
+/.idea
 
 # External software
