--- a/frontends/rust/comet-rs/Cargo.toml
+++ b/frontends/rust/comet-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comet-rs"
-version = "0.1.1-rc2"
+version = "0.1.1-rc3"
 authors = ["Ryan D. Friese <ryan.friese@pnnl.gov>", "Gokcen Kestor <gokcen.kestor@pnnl.gov>"]
 edition = "2021"
 description = "Rust eDSL for COMET: domain specific COMpiler for Extreme Targets"
@@ -15,7 +15,7 @@ categories = ["compilers","hardware-support","science"]
 
 [dependencies]
 num-traits = "0.2"
-comet-rs-impl = {version = "0.1.1-rc1", path="impl" }
+comet-rs-impl = {version = "0.1.1-rc", path="impl" }
 rand = "0.8.0"
 libloading = "0.7"
 inventory = "0.2"
