--- a/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
+++ b/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(LLVM_TARGET_DEFINITIONS TAOps.td)
 mlir_tablegen(TAOps.h.inc -gen-op-decls)
 mlir_tablegen(TAOps.cpp.inc -gen-op-defs)
+mlir_tablegen(TADialect.h.inc -gen-dialect-decls)
+mlir_tablegen(TADialect.cpp.inc -gen-dialect-defs)
 add_public_tablegen_target(COMETTAOpsIncGen)
