--- a/lib/Dialect/IndexTree/CMakeLists.txt
+++ b/lib/Dialect/IndexTree/CMakeLists.txt
@@ -20,6 +20,7 @@ add_llvm_library(COMETIndexTree
 add_dependencies(
   COMETIndexTree
   COMETITOpsIncGen
+  MLIRSupport
   )
 
 target_link_libraries(COMETIndexTree MLIRIR)
