--- a/include/comet/Dialect/IndexTree/IR/CMakeLists.txt
+++ b/include/comet/Dialect/IndexTree/IR/CMakeLists.txt
@@ -3,6 +3,6 @@ mlir_tablegen(ITOps.h.inc -gen-op-decls)
 mlir_tablegen(ITOps.cpp.inc -gen-op-defs)
 mlir_tablegen(ITDialect.h.inc -gen-dialect-decls)
 mlir_tablegen(ITDialect.cpp.inc -gen-dialect-defs)
-add_public_tablegen_target(COMETITOpsIncGen)
+add_public_tablegen_target(COMETIndexTreeOpsIncGen)
 
 
