--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,5 @@
 ##===- CMakeLists.txt ---------------------*/
 add_subdirectory(Dialect)
+add_subdirectory(Conversion)
 add_subdirectory(ExecutionEngine)
-add_subdirectory(blis)
+#add_subdirectory(blis)
