--- a/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
+++ b/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
@@ -3,4 +3,4 @@ mlir_tablegen(TAOps.h.inc -gen-op-decls)
 mlir_tablegen(TAOps.cpp.inc -gen-op-defs)
 mlir_tablegen(TADialect.h.inc -gen-dialect-decls)
 mlir_tablegen(TADialect.cpp.inc -gen-dialect-defs)
-add_public_tablegen_target(COMETTAOpsIncGen)
+add_public_tablegen_target(COMETTensorAlgebraOpsIncGen)
