--- a/lib/Dialect/TensorAlgebra/CMakeLists.txt
+++ b/lib/Dialect/TensorAlgebra/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_llvm_library(COMETTensorAlgebra
+add_llvm_library(COMETTensorAlgebraDialect
   IR/TADialect.cpp
 
-  Conversion/EarlyLowering.cpp
-  Conversion/PreLowering.cpp
-  Conversion/LowerPCToLoops.cpp
-  Conversion/TensorOpsLowering.cpp
-  Conversion/LateLowering.cpp 
-  Conversion/LowerFunc.cpp 
+  # Conversion/EarlyLowering.cpp
+  # Conversion/PreLowering.cpp
+  # Conversion/LowerPCToLoops.cpp
+  # Conversion/TensorOpsLowering.cpp
+  # Conversion/LateLowering.cpp 
+  # Conversion/LowerFunc.cpp 
 
   Transforms/Transforms.cpp
   #Transforms/LinalgTransforms.cpp
@@ -19,9 +19,9 @@ add_llvm_library(COMETTensorAlgebra
 
 
 add_dependencies(
-  COMETTensorAlgebra
-  COMETTAOpsIncGen
+  COMETTensorAlgebraDialect
+  COMETTensorAlgebraOpsIncGen
   )
 
-target_link_libraries(COMETTensorAlgebra MLIRIR)
+target_link_libraries(COMETTensorAlgebraDialect MLIRIR)
 
