--- a/lib/Dialect/TensorAlgebra/CMakeLists.txt
+++ b/lib/Dialect/TensorAlgebra/CMakeLists.txt
@@ -1,16 +1,9 @@
 add_llvm_library(COMETTensorAlgebraDialect
   IR/TADialect.cpp
 
-  # Conversion/EarlyLowering.cpp
-  # Conversion/PreLowering.cpp
-  # Conversion/LowerPCToLoops.cpp
-  # Conversion/TensorOpsLowering.cpp
-  # Conversion/LateLowering.cpp 
-  # Conversion/LowerFunc.cpp 
-
   Transforms/Transforms.cpp
-  #Transforms/LinalgTransforms.cpp
-  #Transforms/TCtoTTGT.cpp
+  Transforms/LinalgTransforms.cpp
+  Transforms/TCtoTTGT.cpp
   Transforms/Passes.cpp
 
   Transforms/CheckImplicitTensorDecls.cpp
