--- a/lib/Dialect/TensorAlgebra/CMakeLists.txt
+++ b/lib/Dialect/TensorAlgebra/CMakeLists.txt
@@ -3,7 +3,7 @@ add_llvm_library(COMETTensorAlgebraDialect
 
   Transforms/Transforms.cpp
   # Transforms/LinalgTransforms.cpp
-  # Transforms/TCtoTTGT.cpp
+  Transforms/TCtoTTGT.cpp
   Transforms/Passes.cpp
 
   Transforms/CheckImplicitTensorDecls.cpp
