Use CMake builtin FindBLAS to find blis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,11 @@ set(LLVM_LIT_ARGS "${LIT_ARGS_DEFAULT}" CACHE STRING "Default options for lit")
 #-------------------------------------------------------------------------------
 # BLIS Configuration
 #-------------------------------------------------------------------------------
-  SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a") #linking with BLIS static library
-  find_package(BLIS REQUIRED)
+  set(BLA_STATIC ON) #linking with BLIS static library
+  set(BLA_VENDOR FLAME)
+  set(BLA_PREFER_PKGCONFIG TRUE)
+  set(BLA_PKGCONFIG_BLAS blis)
+  find_package(BLAS REQUIRED)
 
 #-------------------------------------------------------------------------------
 # COMET configuration
@@ -106,14 +109,12 @@ add_custom_target(comet-doc)
 # Add MLIR, LLVM and BLIS headers to the include path
 include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
-include_directories(${COMET_BLIS_INCLUDE_DIR})
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/mcl/include")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/blis/include/blis")
 
 # Add COMET files to the include path
 include_directories(${COMET_MAIN_INCLUDE_DIR})
 include_directories(${COMET_INCLUDE_DIR})
-
-# Add BLIS LIBRARY_PATH
-set(CMAKE_PREFIX_PATH ${BLIS_LIB_SEARCH_PATHS})
 
 #-------------------------------------------------------------------------------
 # Directory setup
