[GPU][WIP] initial commit for e2e gpu codegen

--- a/lib/Conversion/SCFToGPU/CMakeLists.txt
+++ b/lib/Conversion/SCFToGPU/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_mlir_conversion_library(COMETSCFToGPU
   SCFToGPU.cpp
+  GPUAffineVectorize.cpp
+  GPUHostRegister.cpp
 
 
   ADDITIONAL_HEADER_DIRS
@@ -18,6 +20,7 @@ add_mlir_conversion_library(COMETSCFToGPU
   MLIRIR
   MLIRMemRefDialect
   MLIRSCFDialect
+  MLIRSCFTransforms
   MLIRGPUOps
   MLIRGPUTransformOps
   MLIRPass
