[GPU] added CMake flags to enable/disable GPUToCubin pass; GPUToCubin pass registration; comet-opt cmdline gpuChip option

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -39,10 +39,13 @@ set(LIBS
   # MLIRVectorToSCF
   MLIRTransforms
   MLIRSupport
+  MLIRGPUToNVVMTransforms
+  MLIRGPUTransforms
   COMETUtils
   COMETTensorAlgebraDialect
   COMETIndexTreeDialect
   COMETIndexTreeToSCF
+  COMETSCFToGPU
 )
 
 target_link_libraries(comet-opt 
