--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
 add_subdirectory(SCFToGPU)
 add_subdirectory(SCFToAffine)
+add_subdirectory(Utils)
