--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -49,6 +49,4 @@ target_link_libraries(comet-opt
     PRIVATE MLIRIR 
     ${LIBS} 
     ${dialect_libs} 
-    ${conversion_libs}
-    #${BLIS_LIB}
-    )
+    ${conversion_libs})
