Fixing some of the problems introduced on merge

--- a/include/comet/Dialect/IndexTree/IR/CMakeLists.txt
+++ b/include/comet/Dialect/IndexTree/IR/CMakeLists.txt
@@ -1,9 +1,9 @@
-set(LLVM_TARGET_DEFINITIONS ITOps.td)
-mlir_tablegen(ITOps.h.inc -gen-op-decls)
-mlir_tablegen(ITOps.cpp.inc -gen-op-defs)
-mlir_tablegen(ITDialect.h.inc -gen-dialect-decls)
-mlir_tablegen(ITDialect.cpp.inc -gen-dialect-defs)
-add_public_tablegen_target(COMETITOpsIncGen)
+set(LLVM_TARGET_DEFINITIONS IndexTreeOps.td)
+mlir_tablegen(IndexTreeOps.h.inc -gen-op-decls)
+mlir_tablegen(IndexTreeOps.cpp.inc -gen-op-defs)
+mlir_tablegen(IndexTreeDialect.h.inc -gen-dialect-decls)
+mlir_tablegen(IndexTreeDialect.cpp.inc -gen-dialect-defs)
+add_public_tablegen_target(COMETIndexTreeOpsIncGen)
 
 set(LLVM_TARGET_DEFINITIONS IndexTreeTypes.td)
 mlir_tablegen(IndexTreeTypes.h.inc -gen-typedef-decls)
