V1 - Lower TA to new IndexTree ops, but removed everything else

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -23,7 +23,7 @@ set(LIBS
   COMETUtils
   COMETTensorAlgebraDialect
   COMETIndexTreeDialect
-  COMETIndexTreeToSCF
+  # COMETIndexTreeToSCF
 )
 
 target_link_libraries(comet-opt 
