V1 - Lower TA to new IndexTree ops, but removed everything else

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(IndexTreeToSCF)
+# add_subdirectory(IndexTreeToSCF)
 add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
 if(ENABLE_GPU_TARGET)
