[WIP] Fragile version of index tree to SCF lowering

--- a/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
+++ b/include/comet/Dialect/TensorAlgebra/IR/CMakeLists.txt
@@ -3,4 +3,8 @@ mlir_tablegen(TAOps.h.inc -gen-op-decls)
 mlir_tablegen(TAOps.cpp.inc -gen-op-defs)
 mlir_tablegen(TADialect.h.inc -gen-dialect-decls)
 mlir_tablegen(TADialect.cpp.inc -gen-dialect-defs)
+mlir_tablegen(TAEnums.h.inc -gen-enum-decls)
+mlir_tablegen(TAEnums.cpp.inc -gen-enum-defs)
+mlir_tablegen(TAAttrs.h.inc -gen-attrdef-decls)
+mlir_tablegen(TAAttrs.cpp.inc -gen-attrdef-defs)
 add_public_tablegen_target(COMETTensorAlgebraOpsIncGen)
