--- a/lib/Conversion/TensorAlgebraToSCF/CMakeLists.txt
+++ b/lib/Conversion/TensorAlgebraToSCF/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_mlir_conversion_library(COMETTensorAlgebraToSCF
   LowerFunc.cpp
-
+  TensorAlgebraToSCF.cpp
+  EarlyLowering.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${COMET_MAIN_INCLUDE_DIR}/comet/Conversion/TensorAlgebraToIndexTree
