[WIP] Got domain intersection working, but only with dense output

--- a/lib/Conversion/IndexTreeToSCF/CMakeLists.txt
+++ b/lib/Conversion/IndexTreeToSCF/CMakeLists.txt
@@ -12,6 +12,7 @@ add_mlir_conversion_library(COMETIndexTreeToSCF
 
   LINK_LIBS PUBLIC
   MLIRArithDialect
+  MLIRIndexDialect
   MLIRIR
   MLIRMemRefDialect
   MLIRSCFDialect
