[WIP] Included lowering to LLVM, lowering print op does not work

--- a/lib/Conversion/TensorAlgebraToSCF/CMakeLists.txt
+++ b/lib/Conversion/TensorAlgebraToSCF/CMakeLists.txt
@@ -2,6 +2,7 @@ add_mlir_conversion_library(COMETTensorAlgebraToSCF
   LowerFunc.cpp
   TensorAlgebraToSCF.cpp
   EarlyLowering.cpp
+  LateLowering.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${COMET_MAIN_INCLUDE_DIR}/comet/Conversion/TensorAlgebraToIndexTree
