--- a/.github/workflows/Ubuntu-latest.yml
+++ b/.github/workflows/Ubuntu-latest.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v4
     # - uses: lukka/get-cmake@latest
     - name: Install CMake
-      run: sudo apt-get install cmake
+      run: sudo apt-get install cmake && sudo apt-get install ninja-build
     
     - name: Cache Submodules
       id: cache-submodule
@@ -65,7 +65,7 @@ jobs:
     - uses: actions/checkout@v4
     # - uses: lukka/get-cmake@latest
     - name: Install CMake
-      run: sudo apt-get install cmake
+      run: sudo apt-get install cmake && sudo apt-get install ninja-build
       
     - name: Cache Submodules
       id: cache-submodule
