Lower parallel IndexNode to `scf::ParallelOp`.
1. Added a helper class `AbstractLoopOp` by adding its header and source file. Changed necessary `scf::ForOp` to `AbstractLoopOp` in `IndexTreeToSCF.cpp`. (`lib/Conversion/IndexTreeToSCF/IndexTreeToSCF.cpp`). Class `AbstractLoopOp` allows to hold `scf::ForOp` and `scf::ParallelOp` according to the iterator type from the IndexNode. So far, not all APIs of `scf::ForOp` and `scf::ParallelOp` have been supported by `AbstractLoopOp`, although all APIs used in `IndexTreeToSCF.cpp` are available.
2. Updated the conversion `TensorAlgebraToIndexTree.cpp` (`lib/Conversion/TensorAlgebraToIndexTree/TensorAlgebraToIndexTree.cpp`). When checking if an operation is one of the chosen operations for parallelism, added the logic to check if the LHS’s format is dense. Current parallel for loops only support dense output tensor (so SpGEMM is not supported).
3. The options `mlir-opt` used to lower SCF dialect to LLVM code are as follows, and the shared libraries should include the OpenMP runtime library.

```bash
llvm_options="\
-convert-linalg-to-loops \
-lower-affine \
-convert-scf-to-openmp \
-finalize-memref-to-llvm \
-convert-scf-to-cf \
-convert-cf-to-llvm \
-convert-func-to-llvm \
-convert-index-to-llvm \
-convert-openmp-to-llvm \
-convert-vector-to-llvm \
-canonicalize \
-convert-to-llvm \
"
$ mlir-opt ${llvm_options} -shared-libs=comet/build/lib/libcomet_runner_utils.so,llvm/build/lib/libopm.so llvm_src.mlir
```

Minors
------

1. In `comet.cpp`, added a failure check around `mlir::applyPassManagerCLOptions(pm)`, to comply with the new C++ attribute `[[nodiscard]]`.

--- a/lib/Conversion/IndexTreeToSCF/CMakeLists.txt
+++ b/lib/Conversion/IndexTreeToSCF/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_mlir_conversion_library(COMETIndexTreeToSCF
   IndexTreeToSCF.cpp
+  AbstractLoopOp.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${COMET_MAIN_INCLUDE_DIR}/comet/Conversion/IndexTreeToSCF
