--- a/include/comet/Conversion/CMakeLists.txt
+++ b/include/comet/Conversion/CMakeLists.txt
@@ -1,4 +1,8 @@
-
+if(ENABLE_GPU_TARGET)
+add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(GpuToTriton)
+add_subdirectory(TritonToCuda)
+endif()
 set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
 mlir_tablegen(Passes.capi.h.inc -gen-pass-capi-header --prefix Conversion)
